--- a/src/LandingPage/LandingPage.css
+++ b/src/LandingPage/LandingPage.css
@@ -108,6 +108,7 @@
     bottom: -50px;
     right: -50px;
     border-radius: 50%;
+    z-index: -1;
     animation: floatingParticles 6s infinite alternate ease-in-out;
   }
   
